--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,6 @@
   src: url(assets/fonts/OktaNeue-Regular.woff) format("woff");
 }
 
-
 // Resets
 * {
   margin: 0;
@@ -18,7 +17,6 @@
 *::after {
   box-sizing: inherit;
 }
-
 
 html {
   scroll-behavior: smooth;
@@ -62,10 +60,11 @@ body {
     outline: none;
   }
 
-  input,textarea {
+  input,
+  textarea {
     width: 100%;
     height: 5rem;
-    border: 1px solid #8B8B94;
+    border: 1px solid #8b8b94;
     border-radius: 1rem;
     padding: 0 2rem;
     background-color: transparent;
@@ -77,7 +76,6 @@ body {
   input::placeholder {
     font-size: 1.4rem;
   }
-
 }
 
 /////////////////////////
@@ -145,7 +143,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #F4F4F4;
+    background-color: #f4f4f4;
     width: 4.2rem;
     height: 4.2rem;
     border-radius: 50%;
@@ -171,14 +169,12 @@ body {
     p.pt__header__avatar-p {
       font-size: 1.8rem;
       font-weight: bold;
-
     }
   }
 
   p.pt__header__p {
     font-size: 1.8rem;
     color: $color-primary;
-
   }
 }
 
@@ -214,10 +210,10 @@ body {
   }
 }
 
-input, [type=file] {
+input,
+[type="file"] {
   display: none;
 }
-
 
 ///////////////////////
 // form group style
@@ -234,7 +230,7 @@ input, [type=file] {
 ////////////////////////
 // Selected option
 .auth-active {
-  background-color: lighten(#00A1A41A, 10%);
+  background-color: lighten(#00a1a41a, 10%);
 }
 
 ///////////////////////
@@ -250,12 +246,11 @@ input, [type=file] {
   left: 50%;
   top: -20%;
   border: 2px solid white;
-  background-color: #56F09F;
+  background-color: #56f09f;
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 100px;
 }
-
 
 ///////////////////////////
 // Status tabs
@@ -263,7 +258,7 @@ input, [type=file] {
   width: 8.7rem;
   height: 2.5rem;
   border-radius: 100px;
-  padding: .5rem .5rem;
+  padding: 0.5rem 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -295,7 +290,7 @@ input, [type=file] {
   height: 18rem;
   background-color: white;
   border-radius: 1rem;
-  padding: .6rem .5rem 1.4rem .5rem;
+  padding: 0.6rem 0.5rem 1.4rem 0.5rem;
   margin-bottom: 1.4rem;
 
   cursor: pointer;
@@ -318,7 +313,6 @@ input, [type=file] {
   h6 {
     color: $color-primary;
   }
-
 }
 
 .pt__list__container {
@@ -345,7 +339,6 @@ input, [type=file] {
     font-size: 1.6rem;
     font-weight: bold;
   }
-
 }
 
 .pt__crop {
@@ -368,7 +361,6 @@ input, [type=file] {
     font-weight: bold;
     margin-top: 2rem;
   }
-
 }
 
 //////////////////
@@ -416,8 +408,6 @@ input, [type=file] {
     &:hover {
       cursor: pointer;
     }
-
-
   }
 }
 
@@ -431,7 +421,6 @@ input, [type=file] {
 }
 
 .pt__logo-header__container {
-
   div {
     flex-direction: column;
     background-color: white;
@@ -469,7 +458,6 @@ input, [type=file] {
         img {
           margin-right: 1.4rem;
         }
-
       }
     }
   }
@@ -507,7 +495,7 @@ input, [type=file] {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(black, .8);
+    background-color: rgba(black, 0.8);
     z-index: 1;
   }
 
@@ -543,8 +531,6 @@ input, [type=file] {
   align-items: center;
   justify-content: center;
   background-color: $color-tertiary-light;
-
-
 }
 
 /////////////////////
@@ -566,7 +552,7 @@ input, [type=file] {
 //////////////////
 .cursor-pointer {
   &:hover {
-    cursor: pointer
+    cursor: pointer;
   }
 }
 
@@ -580,14 +566,14 @@ input, [type=file] {
     background-color: transparent;
     border-radius: 10px;
     margin-bottom: 1rem;
-    border: 1px solid #8B8B94;
+    border: 1px solid #8b8b94;
   }
 
   &-input {
     background-color: transparent;
     border: none;
     margin-bottom: 0;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
 
     input {
       color: $color-gray;
@@ -618,35 +604,33 @@ input, [type=file] {
   max-width: 10ch;
   &--ext {
     max-width: 20ch;
-
   }
 }
 
 ///////////////////
 .shown {
   background-color: $color-tertiary-light !important;
-  margin-top: .5rem !important;
+  margin-top: 0.5rem !important;
   margin-left: -7rem !important;
   border-radius: 1rem;
 }
 
 .edit {
-  color: $color-primary ;
-  font-size: 1.4rem ;
+  color: $color-primary;
+  font-size: 1.4rem;
   font-weight: bold;
   text-align: center;
-  padding: .5rem 2rem;
+  padding: 0.5rem 2rem;
   &:not(:last-child) {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
   }
   &__farm {
     position: absolute;
     right: 5px;
-    color: $color-primary ;
+    color: $color-primary;
     background-color: $color-tertiary-light;
     border-radius: 5rem;
   }
-
 }
 
 .pt__crop-gallery {
@@ -656,9 +640,8 @@ input, [type=file] {
 }
 
 .pt__gallery__item {
-
   &:not(:last-child) {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 
   img {
@@ -669,14 +652,20 @@ input, [type=file] {
     display: block;
   }
 
-  &-2, &-3 {
+  &-2,
+  &-3 {
     width: 8rem;
     height: 8rem;
     margin-bottom: 1rem;
   }
 }
 .caret__right {
-
   transform: rotate(180deg);
   margin-left: auto;
+}
+
+.scrollable-menu {
+  height: 200px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
