--- a/src/app/dashboard/farms/components/crop-detail/crop-detail.component.html
+++ b/src/app/dashboard/farms/components/crop-detail/crop-detail.component.html
@@ -930,9 +930,9 @@
             [colorLight]="'#ffffffff'"
             [elementType]="'canvas'"
             [errorCorrectionLevel]="'M'"
-            [imageSrc]="'./assets/img/prod-logo.svg'"
-            [imageHeight]="100"
-            [imageWidth]="100"
+            [imageSrc]="'../../../../../favicon.ico'"
+            [imageHeight]="50"
+            [imageWidth]="50"
             [margin]="2"
             [scale]="1"
             [title]="'Prodtrace ltd'"
